Fix sectionHeader alignment

--- a/sass/components/canvas/attribute_editor.scss
+++ b/sass/components/canvas/attribute_editor.scss
@@ -548,7 +548,7 @@
 
   &__widget {
     $line-height: 24px;
-    $line-header-height: 30px;
+    $line-header-height: 24px;
 
     // Vertical layout
     &-vertical {
@@ -560,6 +560,7 @@
       flex: 1 1;
       display: flex;
       flex-direction: row;
+      align-items: center;
 
       .el-layout-item {
         &:not(:last-child) {
@@ -756,6 +757,7 @@
       display: flex;
       flex-direction: row;
       margin: 2px 0;
+      align-items: center;
 
       &-title {
         flex: 1 1;
